mengubah file HTML

--- a/01-html/index.html
+++ b/01-html/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <h1>Belajar HTML</h1>
+            <h1>Belajar HTML Dari 0</h1>
         </nav>
     </header>
     <main>
