membuat style css untuk portfolio

--- a/01-portfolio/index.html
+++ b/01-portfolio/index.html
@@ -11,6 +11,7 @@
 <meta name="apple-mobile-web-app-title" content="@robzid96" />
 <link rel="manifest" href="/-assets/favicon/site.webmanifest" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -25,11 +26,11 @@
         </nav>
     </header>
     <main>
-    <section>
+    <section class="judul">
         <h1 id="home">Portfolio Web</h1>
         <p>Ini adalah halaman portfolio pertama menggunakan HTML yang insya allah kedepannya akan di upgrade lagi</p>
     </section>
-    <section>
+    <section class="about">
         <h2 id="about">About</h2>
         <p>Saya hanya seorang yang sedang belajar HTML untuk menambah skill dimasa depan</p>
     </section>
